--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,13 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  --text-primary: #000000;
+  --text-secondary: #ffffff;
+  --text-additional: #898989;
+  --text-bigfont: #3c4043;
+  --bg-primary: #ffffff;
+  --bg-secondary: #000000;
+  --bg-additional: #f5f5f5;
+  --border-primary: #0003;
+  --border-secondary: #0070c9;
+  --btn-primary: rgb(40, 40, 40);
+  --transition-speed: 0.3s;
 }
