--- a/app/(root)/explore/Explore.module.css
+++ b/app/(root)/explore/Explore.module.css
@@ -1,6 +1,6 @@
 .container {
     margin-top: calc(0.85rem*2 + 0.5rem*2 + 1.5rem);
-    border-top: 1px solid orange;
+    border-top: 1px solid var(--bg-primary);
 }
 
 .loading {
